<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rozmazane"
    tools:context="com.example.monia.grupomatch.Rejestracja1"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/rejestrText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="332dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:text="@string/rejestr1Btn"
        android:textColor="@color/colorIcons"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/rokText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/imieText"
        android:layout_width="308dp"
        android:layout_height="47dp"
        android:allowUndo="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/imieText"
        app:layout_constraintBottom_toTopOf="@+id/nazwiskoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nazwiskoText"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nazwiskoText"
        app:layout_constraintBottom_toTopOf="@+id/wydzialText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/wydzialText"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/wydzialText"
        app:layout_constraintBottom_toTopOf="@+id/kierunekText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/kierunekText"
        android:layout_width="308dp"
        android:layout_height="42dp"
        android:layout_marginBottom="76dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/kierunekText"
        app:layout_constraintBottom_toTopOf="@+id/semestrText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <EditText
        android:id="@+id/rokText"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/rokText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rejestrText" />

    <EditText
        android:id="@+id/semestrText"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/semestrText"
        app:layout_constraintBottom_toTopOf="@+id/rokText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dalejBtn"
        android:layout_width="82dp"
        android:layout_height="39dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="232dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/but"
        android:onClick="klik2"
        android:text="@string/dalejBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
