<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rozmazane"
    tools:context="com.example.monia.grupomatch.Rejestracja2">

    <TextView
        android:id="@+id/rejestrText"
        android:layout_width="192dp"
        android:layout_height="57dp"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/rejestr1Btn"
        android:textColor="@color/colorIcons"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="27dp"
        android:textColor="@color/colorIcons"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/emailText"
        app:layout_constraintBottom_toTopOf="@+id/loginText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rejestrText" />

    <EditText
        android:id="@+id/loginText"
        android:layout_width="213dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/loginText"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorIcons"
        app:layout_constraintBottom_toTopOf="@+id/hasloText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <EditText
        android:id="@+id/hasloText"
        android:layout_width="214dp"
        android:layout_height="40dp"
        android:layout_marginTop="232dp"
        android:ems="10"
        android:hint="@string/hasloText"
        android:inputType="textPassword"
        android:textColorHint="@color/colorIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phasloText"
        android:layout_width="214dp"
        android:layout_height="46dp"
        android:layout_marginTop="272dp"
        android:ems="10"
        android:hint="@string/phasloText"
        android:inputType="textPassword"
        android:textColorHint="@color/colorIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rejestr2Btn"
        android:layout_width="222dp"
        android:layout_height="66dp"
        android:layout_marginBottom="86dp"
        android:layout_marginTop="8dp"
        android:text="@string/rejestr2Btn"
        android:onClick="klik"
        android:background="@drawable/but"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phasloText"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>
