<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rozmazane"
    tools:context="com.example.monia.grupomatch.Menu"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/mojegrupyBtn"
        android:layout_width="233dp"
        android:layout_height="66dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"

        android:background="@drawable/but"
        android:onClick="klik"
        android:text="@string/mojegrupyBtn"
        app:layout_constraintBottom_toTopOf="@+id/znajdzgrupeBtn"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <Button
        android:id="@+id/znajdzgrupeBtn"
        android:layout_width="233dp"
        android:layout_height="66dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/but"
        android:onClick="klik"
        android:text="@string/znajdzgrupeBtn"
        app:layout_constraintBottom_toTopOf="@+id/wiadomosciBtn"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/wiadomosciBtn"
        android:layout_width="233dp"
        android:layout_height="66dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/but"

        android:onClick="klik"
        android:text="@string/wiadomosciBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
