<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rozmazane"
    tools:context="com.example.monia.grupomatch.Przedmiot">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/zmiennaprzedmiot"
        android:textColor="@color/colorIcons"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557">

        <Button
            android:id="@+id/osobyBtn"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="@drawable/but"
            android:contextClickable="false"
            android:cursorVisible="false"
            android:defaultFocusHighlightEnabled="false"
            android:onClick="klik"
            android:text="@string/osobyBtn" />

        <Button
            android:id="@+id/tematyBtn"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="@drawable/but"
            android:onClick="klik"
            android:text="@string/tematyBtn"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
