<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/serowiec"
    tools:context="com.example.monia.grupomatch.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:layout_width="232dp"
        android:layout_height="491dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/hasloText"
            android:layout_width="214dp"
            android:layout_height="60dp"

            android:layout_alignEnd="@+id/imageView3"
            android:layout_alignRight="@+id/imageView3"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/colorPrimary"
            android:elegantTextHeight="true"
            android:elevation="0dp"
            android:ems="10"
            android:hint="@string/hasloText"
            android:inputType="text"
            android:textColorHint="@color/colorIcons"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="262dp" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="222dp"
            android:layout_height="64dp"
            android:layout_above="@+id/imageView3"
            android:layout_alignLeft="@+id/imageView3"
            android:layout_alignStart="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/linia"
            tools:layout_editor_absoluteY="233dp" />

        <EditText
            android:id="@+id/loginText"
            android:layout_width="213dp"
            android:layout_height="60dp"
            android:layout_above="@+id/hasloText"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="11dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColorHint="@color/colorIcons"
            android:ems="10"
            android:hint="@string/loginText"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="161dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="222dp"
            android:layout_height="64dp"
            android:layout_alignBottom="@+id/zalogujBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="61dp"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/linia"
            tools:layout_editor_absoluteY="233dp" />

        <Button
            android:id="@+id/zalogujBtn"
            android:layout_width="233dp"
            android:layout_height="66dp"
            android:layout_above="@+id/rejestr1Btn"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignStart="@+id/imageView2"
            android:layout_marginBottom="64dp"
            android:background="@drawable/but"
            android:elevation="0dp"
            android:onClick="klik"
            android:text="@string/zalogujBtn"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/rejestr1Btn"
            android:layout_width="235dp"
            android:layout_height="63dp"
            android:layout_alignEnd="@+id/zalogujBtn"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/zalogujBtn"
            android:background="@drawable/but"
            android:onClick="klik"
            android:text="@string/rejestr1Btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zalogujBtn"
            app:layout_constraintVertical_bias="0.514" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
